--- a/api/templates/dashboard_moderno.html
+++ b/api/templates/dashboard_moderno.html
@@ -499,6 +499,10 @@
                 <i class="fas fa-list"></i>
                 <span>Consultar CNAEs Sustentáveis</span>
             </a>
+            <a href="/vagas" class="quick-link">
+                <i class="fas fa-briefcase"></i>
+                <span>Vagas ESG Disponíveis</span>
+            </a>
             <a href="/api/stats" class="quick-link" target="_blank">
                 <i class="fas fa-chart-bar"></i>
                 <span>Estatísticas Detalhadas</span>
