--- a/api/templates/dashboard_moderno.html
+++ b/api/templates/dashboard_moderno.html
@@ -503,6 +503,10 @@
                 <i class="fas fa-briefcase"></i>
                 <span>Vagas ESG Disponíveis</span>
             </a>
+            <a href="/profissionais" class="quick-link">
+                <i class="fas fa-users"></i>
+                <span>Profissionais ESG</span>
+            </a>
             <a href="/api/stats" class="quick-link" target="_blank">
                 <i class="fas fa-chart-bar"></i>
                 <span>Estatísticas Detalhadas</span>
